[tool.poetry]
name = "clouddnsflare"
version = "0.1.0"
description = "A Docker DDNS/DynDNS (Dynamic DNS) alternative for your domains set up in Cloudflare."
authors = ["M4RC0Sx"]
license = "GNU General Public License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
