[tool.poetry]
name = "clouddnsflare"
version = "1.0.5"
description = "A Docker DDNS/DynDNS (Dynamic DNS) alternative for your domains set up in Cloudflare."
authors = ["M4RC0Sx"]
license = "GNU General Public License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
mypy = "^1.8.0"
types-requests = "^2.31.0.20240218"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true